[package]
name = "player-lib"
version = "0.1.0"
authors = ["Gizeta <0w0@gizeta.tk>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "player_lib"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"
rodio = "0.9.0"
